# src/docs/swagger.yaml
@@ -122,7 +122,61 @@ paths:
       responses:
         '200':
           description: List of Task Roles for the Functional Role
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                   functionalRolId:
+                    type: string
+                    description: The ID of the domain
+                   taskRoles:
+                    type: array
+                    items: 
+                      $ref: '#/components/schemas/DomTaskRole'
 
+  /functionalRoles/details:
+    post:
+      summary: Get Task Roles and Entity Types for a list of Functional Roles
+      tags:
+        - Functional Roles
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                functionalRoleIds:
+                  type: array
+                  items:
+                    type: string
+              required:
+                - functionalRoleIds
+      responses:
+        '200':
+          description: List of Functional Roles with their Task Roles and Entity Types
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    functionalRole:
+                      $ref: "#/components/schemas/FunctionalRole"
+                    taskRoles:
+                      type: array
+                      items:
+                        $ref: "#/components/schemas/TaskRole"
+                    accessibleEntityTypes:
+                      type: array
+                      items:
+                        $ref: "#/components/schemas/EntityType"
+        '400':
+          description: Invalid input
+        '404':
+          description: No Functional Roles found
 
   ############################
   # Task Role Endpoints
@@ -314,6 +368,7 @@ paths:
       responses:
         '200':
           description: List of Entity Types for the Domain
+
   ############################
   # Entity Type Endpoints
   ############################
@@ -353,7 +408,11 @@ paths:
             type: string
       responses:
         '200':
-          description: Entity Type details
+          description: Entity type retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EntityType'
 
     put:
       summary: Update an Entity Type
@@ -388,6 +447,20 @@ paths:
       responses:
         '200':
           description: Entity Type deleted
+  /entityTypes/{id}/domains:
+    get:
+      summary: Get all Domains this entity types is assigned to
+      tags:
+        - Entity Types
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of Domains
 
 components:
   schemas:
