# src/routes/entityType.routes.js
@@ -6,6 +6,7 @@ const {
   createEntityType,
   updateEntityType,
   deleteEntityType,
+  getDomainsByEntityType 
 } = require("../controllers/entityType.controller");
 
 router.get("/", getEntityTypes);
@@ -13,5 +14,6 @@ router.get("/:id", getEntityTypeById);
 router.post("/", createEntityType);
 router.put("/:id", updateEntityType);
 router.delete("/:id", deleteEntityType);
+router.get("/:entityTypeId/domains", getDomainsByEntityType);
 
 module.exports = router;
